cdk.out/ImageBuilderTestStackSimple.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "12.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/Resource"
   }
  },
  "VpcPublicSubnet1Subnet5C2D37C4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "12.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PublicSubnet1/Subnet"
   }
  },
  "VpcPublicSubnet1RouteTable6C95E38E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "VpcPublicSubnet1RouteTableAssociation97140677": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet1DefaultRoute3DA9E72A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "VpcPublicSubnet1EIPD7E02669": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PublicSubnet1/EIP"
   }
  },
  "VpcPublicSubnet1NATGateway4D7517AA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcPublicSubnet1EIPD7E02669",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcPublicSubnet1DefaultRoute3DA9E72A",
    "VpcPublicSubnet1RouteTableAssociation97140677"
   ],
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PublicSubnet1/NATGateway"
   }
  },
  "VpcPublicSubnet2Subnet691E08A3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "12.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PublicSubnet2/Subnet"
   }
  },
  "VpcPublicSubnet2RouteTable94F7E489": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet2Subnet691E08A3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet2DefaultRoute97F91067": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "VpcPrivateSubnet1Subnet536B997A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "12.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet1/Subnet"
   }
  },
  "VpcPrivateSubnet1RouteTableB2C5B500": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "VpcPrivateSubnet1RouteTableAssociation70C59FA6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
    },
    "SubnetId": {
     "Ref": "VpcPrivateSubnet1Subnet536B997A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "VpcPrivateSubnet1DefaultRouteBE02A9ED": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
    },
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "VpcPrivateSubnet2Subnet3788AAA1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "12.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet2/Subnet"
   }
  },
  "VpcPrivateSubnet2RouteTableA678073B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "VpcPrivateSubnet2RouteTableAssociationA89CAD56": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet2RouteTableA678073B"
    },
    "SubnetId": {
     "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "VpcPrivateSubnet2DefaultRoute060D2087": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
    },
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet2RouteTableA678073B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ImageBuilderTestStackSimple/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/Vpc/VPCGW"
   }
  },
  "ImagePipelineImageBuilderTopic5AF43CD3": {
   "Type": "AWS::SNS::Topic",
   "Properties": {
    "DisplayName": "Image Builder Notify"
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/ImagePipeline/ImageBuilderTopic/Resource"
   }
  },
  "ImagePipelineRole10746E1A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Description": "IAM role used as part of an Image Builder pipeline",
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/EC2InstanceProfileForImageBuilder"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/EC2InstanceProfileForImageBuilderECRContainerBuilds"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/ImagePipeline/Role/Resource"
   }
  },
  "ImagePipelineKmsKeyBE0C41F8": {
   "Type": "AWS::KMS::Key",
   "Properties": {
    "Description": "KMS Key used to encrypt the SNS topic",
    "EnableKeyRotation": true,
    "KeyPolicy": {
     "Statement": [
      {
       "Action": "kms:*",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::265654035060:root"
          ]
         ]
        }
       },
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/ImagePipeline/KmsKey/Resource"
   }
  },
  "ImagePipelineInstanceProfile98436885": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "InstanceProfileName": "ImagePipeline-InstanceProfile",
    "Roles": [
     {
      "Ref": "ImagePipelineRole10746E1A"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/ImagePipeline/InstanceProfile"
   }
  },
  "ImagePipelineSecurityGroupC109FEA2": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ImageBuilderTestStackSimple/ImagePipeline/SecurityGroup",
    "GroupName": "ImageBuilderSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/ImagePipeline/SecurityGroup/Resource"
   }
  },
  "ImagePipelineInfrastructureConfigurationF13D357B": {
   "Type": "AWS::ImageBuilder::InfrastructureConfiguration",
   "Properties": {
    "Description": "Example Infrastructure Configuration for Image Builder",
    "InstanceProfileName": "ImagePipeline-InstanceProfile",
    "InstanceTypes": [
     "t3.medium",
     "m5.large",
     "m5.xlarge"
    ],
    "Name": "ImagePipeline-InfrastructureConfiguration",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ImagePipelineSecurityGroupC109FEA2",
       "GroupId"
      ]
     }
    ],
    "SnsTopicArn": {
     "Ref": "ImagePipelineImageBuilderTopic5AF43CD3"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    }
   },
   "DependsOn": [
    "ImagePipelineInstanceProfile98436885"
   ],
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/ImagePipeline/InfrastructureConfiguration"
   }
  },
  "ImagePipelineImageRecipeA26BB9F6": {
   "Type": "AWS::ImageBuilder::ImageRecipe",
   "Properties": {
    "Components": [
     {
      "ComponentArn": {
       "Fn::GetAtt": [
        "ImagePipelineTestComponentEDC11BE8",
        "Arn"
       ]
      }
     }
    ],
    "Name": "ImagePipeline-ImageRecipe",
    "ParentImage": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "Version": "0.0.1"
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/ImagePipeline/ImageRecipe"
   }
  },
  "ImagePipelineTestComponentEDC11BE8": {
   "Type": "AWS::ImageBuilder::Component",
   "Properties": {
    "Data": "name: TestComponent\ndescription: Test Component\nschemaVersion: '1.0'\nphases:\n  - name: build\n    steps:\n      - name: hello\n        action: ExecuteBash\n        inputs:\n          commands:\n            - echo \"Hello World\"\n",
    "Description": "Test Component",
    "Name": "TestComponent",
    "Platform": "Linux",
    "Version": "1.0.0"
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/ImagePipeline/TestComponent"
   }
  },
  "ImagePipelineC71500CE": {
   "Type": "AWS::ImageBuilder::ImagePipeline",
   "Properties": {
    "Description": "Image pipeline",
    "ImageRecipeArn": {
     "Fn::GetAtt": [
      "ImagePipelineImageRecipeA26BB9F6",
      "Arn"
     ]
    },
    "InfrastructureConfigurationArn": {
     "Fn::GetAtt": [
      "ImagePipelineInfrastructureConfigurationF13D357B",
      "Arn"
     ]
    },
    "Name": "ImagePipeline-ImagePipeline"
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/ImagePipeline/ImagePipeline"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/01PQW7CMBB8C3fjNrSHXlFUoahSZQXEtXKcDV0S25G9BqEof6/jAOlpxrOz3pkNz7J3nq3k1a9V3a47rPiwJ6laFqWfAdSGD8desbwxR5EzEaoO1T5UBmjSFlbaQHCQVQeLvmhb761CSWjN0zyRz0JM8C1pJwmu8saEw0uky8eFIXCRPwxzkvtrSzHrrwZDbA8qOKTbztnQpwz/hZF54/lwsD2mMomMDKXmQ2nn0A8sjCdpFAhnG+xgZK2Oq1+QbkeIa1qeoArY1eD4kFYaJz25oCg4yK1p8BTcs28x+UtQ2KcDudW9NVPox0zESYcGxpGV4G1wKhmFdFJD7J/i3QcjM7YGfvYvl+yDZ2/8dXX2iGsXDKEGXs74B8SX6kzbAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "ImageBuilderTestStackSimple/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/tests/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
